# WeaklyTypedFloat

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: merge.yaml  pull_request.yaml
cmake/: catch2_tests_from_dir.cmake  get_nwx_cmake.cmake  nwx_library.cmake  nwx_python_module.cmake
cmake/dependencies/: pybind11.cmake
cpp/include/wtf/: forward.hpp  warnings.hpp
cpp/include/wtf/buffer/: buffer.hpp  buffer_view.hpp
cpp/include/wtf/buffer/detail_/: buffer_holder.hpp
cpp/include/wtf/concepts/: floating_point.hpp  stream_insertion.hpp
cpp/include/wtf/detail_/: dispatcher.hpp  downcaster.hpp  variant_from_tuple.hpp
cpp/include/wtf/fp/: fp.hpp
cpp/include/wtf/fp/detail_/: float_holder.hpp  float_model.hpp  float_view_holder.hpp
cpp/include/wtf/rtti/detail_/: type_holder.hpp
cpp/include/wtf/type_traits/: is_convertible.hpp  tuple_append.hpp  type_name.hpp
cpp/src/wtf/: export_wtf.cpp  export_wtf.hpp
cpp/src/wtf/fp/detail_/: float_holder.cpp
cpp/src/wtf/rtti/: type_info.cpp
cxx/include/wtf/: types.hpp  wtf.hpp
cxx/include/wtf/buffer/: float_buffer.hpp
cxx/include/wtf/buffer/detail_/: buffer_view_holder.hpp  contiguous_model.hpp  contiguous_view_model.hpp
cxx/include/wtf/concepts/: concepts.hpp  float_buffer.hpp  iterator.hpp  modifiers.hpp  wtf_float.hpp
cxx/include/wtf/fp/: float.hpp  float_base.hpp  float_view.hpp
cxx/include/wtf/fp/detail_/: float_view_model.hpp
cxx/include/wtf/rtti/: rtti.hpp  type_info.hpp
cxx/include/wtf/rtti/detail_/: type_model.hpp
cxx/include/wtf/type_traits/: float_traits.hpp  is_floating_point.hpp  precision.hpp  type_traits.hpp
cxx/src/wtf/fp/: export_float.cpp  float.cpp
cxx/src/wtf/rtti/detail_/: type_holder.cpp
include/wtf/buffer/detail_/: contiguous_model.hpp
tests/cpp/unit_tests/wtf/buffer/: buffer_view.cpp  float_buffer.cpp
tests/cpp/unit_tests/wtf/buffer/detail_/: buffer_holder.cpp  buffer_view_holder.cpp  contiguous_view_model.cpp
tests/cpp/unit_tests/wtf/concepts/: wtf_float.cpp
tests/cpp/unit_tests/wtf/fp/: float_view.cpp
tests/cpp/unit_tests/wtf/fp/detail_/: float_holder.cpp  float_model.cpp  float_view_holder.cpp
tests/cpp/unit_tests/wtf/rtti/detail_/: type_holder.cpp
tests/cpp/unit_tests/wtf/type_traits/: float_traits.cpp  is_floating_point.cpp  type_name.cpp
tests/cxx/: test_wtf.hpp
tests/cxx/unit_tests/wtf/: main.cpp
tests/cxx/unit_tests/wtf/buffer/detail_/: contiguous_model.cpp
tests/cxx/unit_tests/wtf/concepts/: floating_point.cpp  iterator.cpp  modifiers.cpp  stream_insertion.cpp
tests/cxx/unit_tests/wtf/detail_/: dispatcher.cpp  downcaster.cpp  variant_from_tuple.cpp
tests/cxx/unit_tests/wtf/fp/: float.cpp
tests/cxx/unit_tests/wtf/fp/detail_/: float_view_model.cpp
tests/cxx/unit_tests/wtf/rtti/: type_info.cpp
tests/cxx/unit_tests/wtf/rtti/detail_/: type_model.cpp
tests/cxx/unit_tests/wtf/type_traits/: is_convertible.cpp  precision.cpp  tupple_append.cpp
tests/python/unit_tests/fp/: test_float.py
wtf_cxx_api/: annotated.html  buffer_2float__buffer_8hpp_source.html  buffer_8hpp_source.html  buffer__holder_8hpp_source.html  buffer__view_8hpp_source.html  buffer__view__holder_8hpp_source.html  classes.html  classwtf_1_1buffer_1_1BufferView-members.html  classwtf_1_1buffer_1_1BufferView.html  classwtf_1_1buffer_1_1FloatBuffer-members.html  classwtf_1_1buffer_1_1FloatBuffer.html  classwtf_1_1buffer_1_1detail___1_1BufferHolder-members.html  classwtf_1_1buffer_1_1detail___1_1BufferHolder.html  classwtf_1_1buffer_1_1detail___1_1BufferViewHolder-members.html  classwtf_1_1buffer_1_1detail___1_1BufferViewHolder.html  classwtf_1_1buffer_1_1detail___1_1ContiguousModel-members.html  classwtf_1_1buffer_1_1detail___1_1ContiguousModel.html  classwtf_1_1buffer_1_1detail___1_1ContiguousViewModel-members.html  classwtf_1_1buffer_1_1detail___1_1ContiguousViewModel.html  classwtf_1_1detail___1_1DispatchHelper-members.html  classwtf_1_1detail___1_1DispatchHelper.html  classwtf_1_1fp_1_1Float-members.html  classwtf_1_1fp_1_1Float.html  classwtf_1_1fp_1_1FloatBase-members.html  classwtf_1_1fp_1_1FloatBase.html  classwtf_1_1fp_1_1FloatView-members.html  classwtf_1_1fp_1_1FloatView.html  classwtf_1_1fp_1_1detail___1_1FloatHolder-members.html  classwtf_1_1fp_1_1detail___1_1FloatHolder.html  classwtf_1_1fp_1_1detail___1_1FloatModel-members.html  classwtf_1_1fp_1_1detail___1_1FloatModel.html  classwtf_1_1fp_1_1detail___1_1FloatViewHolder-members.html  classwtf_1_1fp_1_1detail___1_1FloatViewHolder.html  classwtf_1_1fp_1_1detail___1_1FloatViewModel-members.html  classwtf_1_1fp_1_1detail___1_1FloatViewModel.html  classwtf_1_1rtti_1_1TypeInfo-members.html  classwtf_1_1rtti_1_1TypeInfo.html  classwtf_1_1rtti_1_1detail___1_1TypeHolder-members.html  classwtf_1_1rtti_1_1detail___1_1TypeHolder.html  classwtf_1_1rtti_1_1detail___1_1TypeModel-members.html  (+166 more)
wtf_cxx_api/search/: all_10.js  all_11.js  all_12.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  functions_10.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js
