# Copyright 2026 NWChemEx-Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11",
    "setuptools-scm>=8",
    "nwchemex-nwxcmake @ git+https://github.com/NWChemEx/NWXCMake",
]
build-backend = "scikit_build_core.build"

[project]
name = "nwchemex-weaklytypedfloat"
dynamic = ["version"]
description = "Weakly Typed Float — a DSL for type-erased floating-point types"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = []
build-dir = "build"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[[tool.scikit-build.overrides]]
if.state = "editable"
cmake.args = ["-DBUILD_TESTING=ON", "-DDEVELOPER_SETUP=ON"]
